<resources>
    <string name="app_name" translatable="false">ConnectPlus</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="discovery_searching">Searching&#8230;</string>
    <string name="discovery_connecting">Connecting to %1$s&#8230;</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_flash_dfu">Flash DFU</string>
    <string name="menu_connect" translatable="false">JBL Connect</string>
    <string name="menu_connect_plus" translatable="false">JBL Connect+</string>
    <string name="menu_partyboost" translatable="false">JBL PartyBoost</string>

    <string name="dashboard_battery_level" translatable="false">%1$d%%</string>
    <string name="dashboard_battery_level_charging">%1$d%%, charging</string>

    <string name="dialog_dashboard_rename_title">Rename speaker</string>
    <string name="dialog_dashboard_rename_message">Enter a new name (up to 16 bytes)</string>
    <string name="dialog_dashboard_rename_cancel">Cancel</string>

    <string name="dashboard_bass_level">Bass level</string>
    <string name="dashboard_device_name">Speaker name</string>
    <string name="dashboard_firmware_version">Firmware version</string>
    <string name="dashboard_feedback_sounds">Feedback sounds</string>
    <string name="dashboard_battery_state">Battery state</string>
    <string name="dashboard_feedback_sounds_disabled">Feedback sounds are disabled</string>

    <string name="dfu_connect_charger_title">Connect the speaker to a charger</string>

    <string name="dialog_dfu_warning_title">Warning!</string>
    <string name="dialog_dfu_warning_agree">I understand</string>

    <string name="dfu_state_file_not_selected">File not selected</string>
    <string name="dfu_state_loading_file">Loading file&#8230;</string>

    <string name="dfu_state_ready">Ready to flash</string>
    <string name="dfu_state_initializing_dfu">Initializing DFU mode&#8230;</string>
    <string name="dfu_state_flashing">Flashing: %1$.2f%%</string>
    <string name="dfu_state_error">Something went wrong. Most likely, the speaker refused the firmware file. Check if you selected the right file and if it\'s not damaged. The speaker will automatically reboot into normal mode. You may close this app.</string>

    <string name="dfu_file_info_size">Firmware size</string>
    <string name="dfu_file_info_checksum">Firmware CRC32</string>

    <string name="dfu_error_file_manager">Failed to open file. Try another file manager.</string>
    <string name="dfu_error_wrong_file">Wrong file selected. You must select a file with .DFU extension.</string>

    <string name="setting_privacy">Privacy</string>
    <string name="settings_send_speaker_data_title">Send speaker data</string>
    <string name="settings_send_speaker_data_summary">Sends speaker model, color and firmware version</string>
    <string name="settings_send_app_data_summary">Uses Google Crashlytics and Google Analytics. Restart app to apply changes.</string>
    <string name="settings_send_app_data_title">Send app usage data</string>
    <string name="dfu_button_flash">Flash</string>
    <string name="dfu_button_cancel">Cancel</string>
    <string name="dfu_button_open_file">Select a file</string>
    <string name="dfu_state_canceled">Canceled! The speaker will reboot into normal mode. You may close this app.</string>
    <string name="dashboard_speakerphone_mode">Speakerphone mode</string>
    <string name="connect_searching_on">Searching&#8230;</string>
    <string name="connect_searching_off">Not searching</string>
    <string name="connect_button_search">Search</string>
    <string name="connect_button_stop">Stop</string>
    <string name="settings_images_info">All speaker logos and images belong to JBL.</string>
    <string name="setting_about">About</string>
    <string name="settings_source_code_title">Source code</string>
    <string name="settings_source_code_summary">Tap to open in browser.</string>
    <string name="settings_app_version_title">App version</string>
    <string name="speaker_left_channel">Left</string>
    <string name="speaker_right_channel">Right</string>
    <string name="speaker_both_channel">Stereo</string>
    <string name="speaker_audio_channel">Audio channel</string>
    <string name="settings_logs_title">Copy app logs</string>
    <string name="settings_logs_summary">Tap to copy app logs into clipboard.</string>
    <string name="connect_tooltip">Turn on search to find more speakers. You can switch audio channels for each individually.</string>
    <string name="settings_dark_theme_title">Theme</string>
    <string name="settings_dark_theme_enabled">Dark</string>
    <string name="settings_dark_theme_disabled">Light</string>
    <string name="settings_dark_theme_system">Follow system settings</string>
    <string name="dialog_dashboard_rename_confirm">Rename</string>
    <string name="dfu_warning_dont_show">Do not show again</string>
    <string name="dialog_dfu_warning_text">Flashing custom firmware is not officially supported and may void your warranty. There is a possibility of bricking the speaker. No one is taking any responsibility for any possible problems. Your further use of this functionality is at your own risk.</string>
    <string name="dfu_connect_charger_text">The speaker must be connected to a charger during the entire flashing process.</string>
    <string name="dfu_connect_charger_title_connected">Do not disconnect the speaker from the charger</string>
    <string name="dfu_state_done">Done! Do not press any buttons on the speaker nor unplug it, otherwise you\'ll get a brick! The speaker will automatically reboot in a few minutes. You may close this app.</string>
    <string name="ble_not_supported">Bluetooth LE is not supported on this device or Bluetooth is disabled</string>

    <string name="settings_app_version_summary" translatable="false">1.2.2</string>
</resources>
