<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dfu.DfuView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:divider="?android:attr/listDivider"
        android:orientation="vertical"
        android:showDividers="middle|end">

        <LinearLayout
            android:id="@+id/dfu_battery_warning_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="@dimen/card_vertical_border"
            android:paddingEnd="16dp"
            android:paddingBottom="@dimen/card_vertical_border"
            android:visibility="visible">

            <ImageView
                android:id="@+id/dfu_warning_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_error"
                app:tint="?attr/colorError" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/dfu_connect_charger_message"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/dfu_file_selector_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="@dimen/card_vertical_border"
            android:paddingEnd="16dp"
            android:paddingBottom="@dimen/card_vertical_border"
            android:visibility="visible">

            <TextView
                android:id="@+id/dfu_file_selector_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/dfu_state_file_not_selected"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dfu_file_selector_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dfu_button_open_file" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/dfu_file_info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="@dimen/card_vertical_border"
            android:paddingRight="16dp"
            android:paddingBottom="@dimen/card_vertical_border"
            android:visibility="visible">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/dfu_file_info_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/dfu_file_info_size"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

                <TextView
                    android:id="@+id/dfu_file_info_size_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dfu_file_info_checksum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/dfu_file_info_checksum"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

                <TextView
                    android:id="@+id/dfu_file_info_checksum_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/dfu_flash_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingTop="@dimen/card_vertical_border"
            android:paddingEnd="16dp"
            android:paddingBottom="@dimen/card_vertical_border"
            android:visibility="visible">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/dfu_flash_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/dfu_state_ready"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dfu_flash_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dfu_button_flash" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.progressindicator.ProgressIndicator
                android:id="@+id/dfu_flash_progressbar"
                style="@style/Widget.MaterialComponents.ProgressIndicator.Linear.Indeterminate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:max="100000"
                android:visibility="visible" />

            <TextView
                android:id="@+id/dfu_flash_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:visibility="visible" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="@dimen/card_vertical_border"
            android:paddingEnd="16dp"
            android:paddingBottom="@dimen/card_vertical_border">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="0"
                android:src="@drawable/ic_info"
                app:tint="?android:attr/textColorHint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/dialog_dfu_warning_text" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
